--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -12,10 +12,13 @@ jobs:
     steps:
       - name: Checkout HTMLCSS sources
         uses: actions/checkout@v4
+
       - name: Update Build Environment
         run: sudo apt-get update --fix-missing -y
+
       - name: Install Prerequisites
         run: sudo apt-get install -y cppcheck zlib1g-dev
+
       - name: Download Coverity Build Tool
         run: |
           wget -q https://scan.coverity.com/download/linux64 --post-data token="$TOKEN&project=$GITHUB_REPOSITORY" -O cov-analysis-linux64.tar.gz
@@ -24,10 +27,14 @@ jobs:
         env:
           TOKEN: ${{ secrets.COVERITY_SCAN_TOKEN }}
 
+      - name: Configure HTMLCSS
+        run: ./configure --enable-debug --enable-maintainer
+
       - name: Build with cov-build
         run: |
           export PATH=`pwd`/cov-analysis-linux64/bin:$PATH
           cov-build --dir cov-int make
+
       - name: Submit the result to Coverity Scan
         run: |
           tar czvf cov.tgz cov-int
