--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -11,7 +11,9 @@ jobs:
     environment: Coverity
     steps:
       - name: Checkout HTMLCSS sources
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
+        with:
+          submodules: recursive
 
       - name: Update Build Environment
         run: sudo apt-get update --fix-missing -y
